# slhdsa-c-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  bindgen_header.h  build.rs
docs/: ffi_only.md  wrapper.md
src/: ffi.rs  lib.rs  wrapper.rs
src/wrapper/: parameter_sets.rs  signature_encoding.rs  signing_key.rs  utils.rs  verifying_key.rs
src/wrapper/utils/: macros.rs  rand.rs  transcoding.rs  typenum.rs
tests/: slhdsa.rs  test_bindings.rs  test_constants.rs
tests/common/: mod.rs
tests/helpers/: mod.rs
tests/parameter_sets/: mod.rs
