[package]
edition = "2021"
name = "slhdsa-c-rs"
version = "0.0.2-dev"
description = "FFI bindings for the slhdsa-c SLH-DSA implementation"
license = "ISC OR MIT OR Apache-2.0"
repository = "https://github.com/romen/slhdsa-c-rs"
readme = "README.md"

[features]
wrapper = ["signature"]
default = ["wrapper"]

[dependencies]
signature = { version = "2.2.0", optional = true }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.35"
glob = "0.3.3"

[dev-dependencies]
env_logger = "0.11.8"
log = "0.4.28"
anyhow = "1.0.99"
rand = { version = "0.9.2", features = ["std_rng"] }
paste = "1.0.15"

[workspace]
